chore: align core services logic and implement validation remediations